# aws-image-pipeline

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
docs/cli-playbooks/: 01-build-base.md  02-build-app.md  03-ami-lifecycle.md  04-proxmox-builder.md
image_pipeline/: pipeline_stack.py
packer/: app.pkr.hcl  base.pkr.hcl  variables.pkrvars.hcl
provisioners/: harden.sh  install_cw_agent.sh  install_deps.sh  verify_build.sh
scripts/: deprecate_ami.py  publish_ami.py  verify_ami.py
