[tool.poetry]
name = "aws-image-pipeline"
version = "0.1.0"
description = "Golden AMI baking pipeline for the ops-lab platform"
authors = ["simoda"]

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.0"
constructs = "^10.0"
boto3 = "^1.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
